@@ -1,6 +1,6 @@
 Package: Rcmdr
 Version: 2.0-2
-Date: 2013/11/12
+Date: 2013/11/23
 Title: R Commander
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
     person("Milan", "Bouchet-Valat", role = "aut"),
@@ -28,7 +28,7 @@ Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaste
     person("Kevin", "Wright", role="ctb")
    )
 Depends: R (>= 3.0.0), grDevices, utils, splines
-Imports: tcltk
+Imports: tcltk, tcltk2
 Suggests: abind, aplpack, car (>= 2.0-18), colorspace, effects (>= 1.0-7), e1071, foreign, grid, Hmisc, knitr, lattice, leaps, lmtest, markdown, MASS, mgcv, multcomp (>= 0.991-2), nlme, nnet, relimp, rgl, RODBC, sem (>= 2.1-1) 
 ByteCompile: yes
 Description:
